--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
+    <link rel="stylesheet" href="webjars/bootstrap/3.3.7-1/css/bootstrap.min.css"/>
+    <script src="webjars/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
+    <script src="webjars/angularjs/1.6.4/angular.min.js"></script>
+    <script src="webjars/angularjs/1.6.4/angular-route.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controller/country-controller.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<nav>
+    <a href="/country">Country</a>
+</nav>
+<div ng-view="ng-view">
+</div>
 <h1>Hello World</h1>
 </body>
 </html>
